# nokube-rs

./: .cursorrules  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  build_config_ext.yml  cluster-config-template.yaml  home-cluster.yaml  img_dependency_nokube_base.checksum  logA  lognokube  obsidian_design.canvas  setup.py  test-pod.yaml
.claude/: settings.local.json
.github/workflows/: release.yml
configs/images/: nokube_base.yaml
examples/: cluster-config.yaml
examples/gitops/: README.md  apply-gitops.py  applyer_nokube.py  applyer_nokube_spec.config.yaml  gitops-config.yaml  gitops-controller.py  gitops-daemonset.yaml  gitops_design.canvas  nokube-gitops.yaml  sample-stateless-service.yaml  webhook-server.py
examples/gitops/gitops-output/: gitops-home-cluster.yaml
nokube_rs_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: Dockerfile  apt-packages-ci.txt  build_and_run.py  build_with_container.py  create_test_pod_data.py  deps.yaml  deps.yaml.example  deps_cache.json  lib_path_mapping.py  prepare_build_img.py  quick_test.py  release.py  requirements-ci.txt  run_nokube.sh  test_all_in_container.py
scripts/tools/: get_version.py
src/: error.rs  main.rs
src/agent/: command_mode_agent.rs  mod.rs
src/agent/general/: docker_runner.rs  endpoints.rs  exporter.rs  grafana_manager.rs  log_collector.rs  mod.rs  process_manager.rs  remote_executor.rs
src/agent/master_agent/: grafana_manager.rs  master_agent_core.rs  mod.rs
src/agent/runtime/: deployment.rs
src/agent/service_agent/: mod.rs  service_mode_agent.rs  status.rs
src/config/: cluster_config.rs  config_manager.rs  etcd_manager.rs  mod.rs
src/k8s/: actors.rs  controllers.rs  mod.rs  objects.rs  storage.rs  the_proxy.rs
src/remote_ctl/: deployment_controller.rs  mod.rs  ssh_manager.rs
